// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnCombine 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-bordered"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          colspan="2"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                          rowspan="2"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                          rowspan="2"
                        >
                          操作
                        </th>
                      </tr>
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          姓
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          名
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="fish"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="go"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          123
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="cat"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="go2"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          456
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="dog"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="go3"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          789
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"familyName":"fish","lastName":"go","age":123},{"familyName":"cat","lastName":"go2","age":456},{"familyName":"dog","lastName":"go3","age":789}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ColumnControl 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          123
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          456
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          789
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"name":"fish","age":123},{"name":"cat","age":456},{"name":"dog","age":789}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ColumnControl2 1`] = `
<DocumentFragment>
  <div
    class="ant-space ant-space-vertical"
    style="display: flex;"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 10px;"
    >
      <div>
        <div
          class="ant-formily-layout"
        >
          <form>
            <div
              class="ant-table-wrapper antd_formily_table_boost undefined"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup />
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                名字
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                年龄
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="0"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                  data-span="1"
                                >
                                  <div
                                    class="ant-formily-item-control"
                                  >
                                    <div
                                      class="ant-formily-item-control-content"
                                    >
                                      <div
                                        class="ant-formily-item-control-content-component"
                                      >
                                        <span
                                          class="ant-input-affix-wrapper"
                                        >
                                          <input
                                            class="ant-input"
                                            type="text"
                                            value="fish"
                                          />
                                          <span
                                            class="ant-input-suffix"
                                          >
                                            <span />
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                123
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                  data-span="1"
                                >
                                  <div
                                    class="ant-formily-item-control"
                                  >
                                    <div
                                      class="ant-formily-item-control-content"
                                    >
                                      <div
                                        class="ant-formily-item-control-content-component"
                                      >
                                        <span
                                          class="ant-input-affix-wrapper"
                                        >
                                          <input
                                            class="ant-input"
                                            type="text"
                                            value="cat"
                                          />
                                          <span
                                            class="ant-input-suffix"
                                          >
                                            <span />
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                456
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                  data-span="1"
                                >
                                  <div
                                    class="ant-formily-item-control"
                                  >
                                    <div
                                      class="ant-formily-item-control-content"
                                    >
                                      <div
                                        class="ant-formily-item-control-content-component"
                                      >
                                        <span
                                          class="ant-input-affix-wrapper"
                                        >
                                          <input
                                            class="ant-input"
                                            type="text"
                                            value="dog"
                                          />
                                          <span
                                            class="ant-input-suffix"
                                          >
                                            <span />
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                789
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              {"data":[{"name":"fish","age":123},{"name":"cat","age":456},{"name":"dog","age":789}],"column_config":{}}
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="button"
          >
            <span>
              Toggle第一列
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnReact 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 50%;"
                      />
                      <col
                        style="width: 50%;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="fish"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          123
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="cat"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          456
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="dog"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          789
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"name":"fish","age":123},{"name":"cat","age":456},{"name":"dog","age":789}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ColumnWidth 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 33%;"
                      />
                      <col
                        style="width: 33%;"
                      />
                      <col
                        style="width: 33%;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="fish"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          123
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="cat"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          456
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="dog"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          789
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"name":"fish","age":123},{"name":"cat","age":456},{"name":"dog","age":789}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;
